--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
-    "next": "14.2.25",
+    "next": "^14.2.33",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
